<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Forte Oil</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner">Forte Mobile</string>
    <string name="see_map">See map</string>
    <string name="next_station">%1$s is %2$s away</string>
    <string name="home_column_width">170sp</string>
    <string name="locating_service_station">Locating nearest service station</string>
    <string name="title_activity_map">Maps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_location">Your current location is %s</string>
    <string name="demo_loc">Forte Oil - Wharf Road</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="location_label">Fuel Station Locator</string>
    <string name="vehicle_maintenance">Vehicle Maintenance</string>
    <string name="products">Products</string>
    <string name="news">News</string>
    <string name="available_stations">Available Stations</string>
    <string name="locate">Locate Nearest Station</string>
    <string name="register_vehicle">Register Vehicle</string>
    <string name="alerts">Alerts</string>
    <string name="title_activity_center_list">Centers</string>
    <string name="no_centers">No centers were found</string>
    <string name="title_activity_web_view">Web</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="empty_centers">No centers were found</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="view_in_map">View in map</string>
    <string name="loading">Loading, please wait...</string>
    <string name="search_nearest_center">Searching for nearest center, please wait...</string>
    <string name="closest_station_is">Closest station is</string>
    <string name="center_info_format">%1$s, %2$s is %3$.2f%4$s away</string>
    <string name="kilometers">Km</string>
    <string name="miles">Mi</string>
    <string name="no_location">Current location not determined</string>
    <string name="google_maps_api_url_root_json">http://maps.googleapis.com/maps/api/directions/json</string>
    <string name="google_maps_uri">http://maps.google.com/maps</string>
    <string name="title_activity_station_locator">StationLocator</string>
    <string name="stations">Stations</string>
    <string name="stations_within">Stations within</string>
    <string-array name="radius_list">
        <item>1%s</item>
        <item>3.5%s</item>
        <item>5%s</item>
        <item>6%s</item>
        <item>7%s</item>
        <item>7.5%s</item>
        <item>8%s</item>
        <item>8.5%s</item>
        <item>10%s</item>
    </string-array>
    <string name="conversation_meter_to_mile">0.00062137</string>
    <string name="locate_stations">Locate Stations</string>
    
    <string name="animate_center_focus">false</string>
    <string name="no_centers_within">No center within %1$.1f%2$s was found</string>
    <string name="category_filling_station">Filling Station</string>
    <string name="category_service_station">Service Station</string>
    <string name="category_gas_station">Filling Station</string>
    <string name="category_service_station">Service Station</string>
    <string name="category_gas_station">Filling Station</string>
    <string name="category_car_wash">Service Station</string>
    <string name="my_location">My Location</string>
    <string name="drive_there">Drive there</string>
    <string name="available">Available</string>
    <string name="drive_here">Drive here</string>
    <string name="action_search">Search</string>
    <string name="format_distance">%1$.2f%2$s/%3$.2f%4$s</string>
    <string-array name="center_order_by_list">
        <item >distance</item>
        <item >Location</item>
        <item >Name</item>
        
    </string-array>
</resources>
