<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/main_item_alerts" android:showAsAction="ifRoom" android:title="@string/alerts" android:icon="@drawable/ic_alerts">
    </item>
    
    <item android:id="@+id/action_search_in_home_map" android:title="@string/action_search" android:icon="@drawable/ic_action_search" android:showAsAction="ifRoom|collapseActionView" android:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/main_item_list" android:icon="@drawable/ic_action_list" android:showAsAction="ifRoom" android:title="@string/available_stations">
    </item>
    <item
        android:id="@+id/main_item_products"
        android:title="@string/products" android:icon="@drawable/ic_products" android:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/main_item_news"
        android:showAsAction="ifRoom"
        android:title="@string/news" android:icon="@drawable/ic_action_news">
    </item>
    
    <item
        android:id="@+id/main_item_register_vehicle"
        android:showAsAction="ifRoom"
        android:title="@string/register_vehicle" android:icon="@drawable/ic_car">
    </item>
</menu>